--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.28.0",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-tsparticles": "^1.42.4",
     "sweetalert2": "^11.4.6",
-    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
