--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "emailjs-com": "^3.2.0",
+    "netlify-cli": "^9.13.5",
+    "netlify-lambda": "^2.0.15",
+    "node-fetch": "^3.2.3",
+    "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.28.0",
